--- a/project/style.css
+++ b/project/style.css
@@ -1,11 +1,3 @@
-:root {
-    --primary-color1: var(hsl(225, 100%, 94%))
-    --primary-color2: var(hsl(245, 75%, 52%))
-    --neutral-color1: var(hsl(225, 100%, 98%))
-    --neutral-color2: var(hsl(224, 23%, 55%))
-    --neutral-color3: var(hsl(223, 47%, 23%))
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -20,7 +12,8 @@ main {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(img/pattern-background-desktop.svg) no-repeat center center/cover;
+    background: url(img/pattern-background-desktop.svg) no-repeat;
+    background-color: hsl(225, 100%, 94%);
 }
 
 #container {
@@ -35,8 +28,58 @@ img {
     border-top-left-radius: 10px;
 }
 
+.card_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 550px;
+    text-align: center;
+}
+
+.card_text .payment {
+    display: inline-block;
+    text-decoration: none;
+    width: 350px;
+    height: 3rem;
+    background-color: hsl(245, 75%, 52%);
+    color: #fff;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 5px 10px lightgray;
+}
 
 
+.card_text .cancel {
+    text-decoration: none;
+    color: hsl(224, 23%, 55%);
+}
+
+.lead h2 {
+    /* width: 200px; */
+    text-align: center;
+    padding: 1rem;
+}
+
+.lead p {
+    text-align: center;
+    /* padding: 0 1.5rem; */
+    width: 300px;
+    height: 100px;
+    align-items: center;
+}
+
+.plan {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 350px;
+    height: 100px;
+    background: hsla(225, 100%, 94%, 0.3);
+    padding: 0 20px;
+    border-radius: 5px;
+}
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
